--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="login-btn" class="fa-solid fa-user"></div>
                 <a href="#" class="fa-solid fa-heart"></a>
                 <a href="#" class="fa-solid fa-cart-shopping"></a>
-                
+
             </div>
         </div>
 
@@ -50,16 +50,41 @@
 
     <!-- INICIO MENU-NAV -->
     <nav class="barra-menu">
-        <a href="#inicio" class="bx bxs-home">Inicio</a>
-        <a href="#produtos" class="bx bxs-capsule">Produtos</a>
-        <a href="#ofertas" class="bx bxs-purchase-tag">Ofertas</a>
-        <a href="#novidades" class="bx bxl-shopify">Novidades</a>
-        <!-- <a href="#" class="bx bxs-offer">Ofertas</a> -->
+        <a href="#inicio" class="bx bxs-home"></a>
+        <a href="#produtos" class="bx bxs-capsule"></a>
+        <a href="#" class="bx bxs-offer"></a>
+        <a href="#" class="fa-solid fa-star"></a>
+        <!-- <a href="#ofertas" class="bx bxs-purchase-tag"></a>
+        <a href="#novidades" class="bx bxl-shopify"></a> -->
     </nav>
-
-
     <!-- FIM BARRA-NAV -->
 
+
+    <!-- INICIO LOGIN FORM -->
+    <div class="login-form-container">
+
+        <div id="close-login-btn" class="bx bx-x-circle"> </div>
+
+        <form action="">
+            <h3>Entrar</h3>
+
+            <span>Login</span>
+            <input type="email" name="" class="box" placeholder="Digite seu e-mail" id="">
+
+            <span>Senha</span>
+            <input type="password" name="" class="box" placeholder="Digite sua senha" id="">
+
+            <div class="checkbox">
+                <input type="checkbox" name="" id="lembre-me">
+                <label for="lembre-me">Lembre-me</label>
+            </div>
+
+            <input type="submit" value="Entrar" class="btn">
+            <p>esqueceu sua senha? <a href="#">Clique aqui</a></p>
+            <p>não tem uma conta? <a href="#">Cadastre-se</a></p>
+        </form>
+    </div>
+    <!-- FIM LOGIN FORM -->
 
 
 
