--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Farmacia</title>
-    <link rel="shortcut icon" href="imagens/favicon/favicon.png" type="image/x-icon">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="imagens/favicon/favicon.png" type="image/x-icon">
+
+    <!-- ICONS -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/4ad612980f.js" crossorigin="anonymous"></script>
+
+    <!-- SWIPER -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
 </head>
 
@@ -88,6 +96,33 @@
 
 
 
+    <!-- COMEÇO SECTION INICIO -->
+
+    <section class="home" id="home">
+        <div class="row">
+            <div class="content">
+                <h3>Texto</h3>
+            </div>
+        </div>
+
+        <div class="swiper books-slider">
+
+            <div class="swiper-wrapper">
+
+                <a href="#" class="swiper-slide"><img src="imagens/banner/book3.png" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="imagens/banner/book-5.png" alt=""></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- FINAL SECTION INICIO -->
+
+
+    <a href="#" class="swiper-slide"><img src="imagens/banner/book3.png" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="imagens/banner/book-5.png" alt=""></a>
+
+
+  
 
 
 
@@ -106,7 +141,13 @@
 
 
 
+
+
+    <!-- JS -->
     <script src="js/script.js"></script>
+
+    <!-- SWIPER JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
