--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://kit.fontawesome.com/4ad612980f.js" crossorigin="anonymous"></script>
 
     <!-- SWIPER -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
 </head>
 
@@ -98,31 +98,23 @@
 
     <!-- COMEÇO SECTION INICIO -->
 
-    <section class="home" id="home">
-        <div class="row">
-            <div class="content">
-                <h3>Texto</h3>
-            </div>
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="imagens/banner/banner01.webp" alt=""></div>
+            <div class="swiper-slide"><img src="imagens/banner/banner03.webp" alt=""></div>
+
         </div>
-
-        <div class="swiper books-slider">
-
-            <div class="swiper-wrapper">
-
-                <a href="#" class="swiper-slide"><img src="imagens/banner/book3.png" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="imagens/banner/book-5.png" alt=""></a>
-            </div>
-        </div>
-    </section>
-
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+    </div>
     <!-- FINAL SECTION INICIO -->
 
 
-    <a href="#" class="swiper-slide"><img src="imagens/banner/book3.png" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="imagens/banner/book-5.png" alt=""></a>
 
 
-  
+
+
 
 
 
@@ -147,7 +139,7 @@
     <script src="js/script.js"></script>
 
     <!-- SWIPER JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 </body>
 
 </html>
