--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- SWIPER -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" /> -->
 </head>
 
 <body>
@@ -54,6 +55,7 @@
         </div>
 
     </header>
+
     <!-- FIM HEADER SECTION -->
 
     <!-- INICIO MENU-NAV -->
@@ -62,8 +64,8 @@
         <a href="#produtos" class="bx bxs-capsule"></a>
         <a href="#" class="bx bxs-offer"></a>
         <a href="#" class="fa-solid fa-star"></a>
-        <!-- <a href="#ofertas" class="bx bxs-purchase-tag"></a>
-        <a href="#novidades" class="bx bxl-shopify"></a> -->
+        <a href="#ofertas" class="bx bxs-purchase-tag"></a>
+        <a href="#novidades" class="bx bxl-shopify"></a>
     </nav>
     <!-- FIM BARRA-NAV -->
 
@@ -98,17 +100,19 @@
 
     <!-- COMEÇO SECTION INICIO -->
 
+
+    <!-- FINAL SECTION INICIO -->
+
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="imagens/banner/banner01.webp" alt=""></div>
             <div class="swiper-slide"><img src="imagens/banner/banner03.webp" alt=""></div>
 
         </div>
-        <div class="swiper-button-next"></div>
+        <!-- <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination"></div> -->
     </div>
-    <!-- FINAL SECTION INICIO -->
 
 
 
@@ -125,21 +129,26 @@
 
 
 
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script> -->
+
+    
 
 
 
 
 
 
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script> -->
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- JS -->
     <script src="js/script.js"></script>
+    <!-- <script src="js/swiper-bundle.min.js"></script> -->
 
     <!-- SWIPER JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
 </body>
 
 </html>
