--- a/index.html
+++ b/index.html
@@ -129,8 +129,6 @@
 
                     <div class="icons">
                         <a href="#" class="bx bxs-heart"></a>
-                        <!-- <a href="#" class="bx bx-search"></a>
-                        <a href="#" class="bx bx-show"></a> -->
                     </div>
 
                     <div class="image">
@@ -148,8 +146,6 @@
 
                     <div class="icons">
                         <a href="#" class="bx bxs-heart"></a>
-                        <!-- <a href="#" class="bx bx-search"></a>
-                        <a href="#" class="bx bx-show"></a> -->
                     </div>
 
                     <div class="image">
@@ -167,8 +163,6 @@
 
                     <div class="icons">
                         <a href="#" class="bx bxs-heart"></a>
-                        <!-- <a href="#" class="bx bx-search"></a>
-                        <a href="#" class="bx bx-show"></a> -->
                     </div>
 
                     <div class="image">
@@ -186,8 +180,6 @@
 
                     <div class="icons">
                         <a href="#" class="bx bxs-heart"></a>
-                        <!-- <a href="#" class="bx bx-search"></a>
-                        <a href="#" class="bx bx-show"></a> -->
                     </div>
 
                     <div class="image">
@@ -205,8 +197,6 @@
 
                     <div class="icons">
                         <a href="#" class="bx bxs-heart"></a>
-                        <!-- <a href="#" class="bx bx-search"></a>
-                        <a href="#" class="bx bx-show"></a> -->
                     </div>
 
                     <div class="image">
@@ -228,9 +218,52 @@
         </div>
 
     </section>
-
-
     <!-- FINAL SECTION PRODUTOS -->
+
+
+    <!-- COMEÇO SECTION ICONS -->
+
+    <section class="icons-container">
+        <div class="icons">
+            <i class="fa-solid fa-motorcycle"></i>
+            <div class="conteudo">
+                <h3>Frete grátis</h3>
+                <p> acima de R$ 100</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="icons-container">
+        <div class="icons">
+            <i class="fa-solid fa-bolt-lightning"></i>
+            <div class="conteudo">
+                <h3>Entrega rápida</h3>
+                <p> Em até 2 horas</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="icons-container">
+        <div class="icons">
+            
+            <div class="conteudo">
+                <h3>Retire na loja</h3>
+                <p> acima de R$ 100</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="icons-container">
+        <div class="icons">
+            <i class="fa-solid fa-motorcycle"></i>
+            <div class="conteudo">
+                <h3>Frete grátis</h3>
+                <p> acima de R$ 100</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- FINAL SECTION ICONS -->
 
 
 
