--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
     <nav class="barra-menu">
         <a href="#inicio" class="bx bxs-home"></a>
         <a href="#produtos" class="bx bxs-capsule"></a>
-        <a href="#" class="bx bxs-offer"></a>
-        <a href="#" class="fa-solid fa-star"></a>
-        <a href="#ofertas" class="bx bxs-purchase-tag"></a>
-        <a href="#novidades" class="bx bxl-shopify"></a>
+        <a href="#ofertas" class="bx bxs-offer"></a>
+        <a href="#novidades" class="fa-solid fa-star"></a>
+        <!-- <a href="#ofertas" class="bx bxs-purchase-tag"></a> -->
     </nav>
     <!-- FIM BARRA-NAV -->
 
@@ -162,7 +161,7 @@
     <!-- COMEÇO SECTION PRODUTOS -->
 
     <section class="produtos" id="produtos">
-        <h1 class="titulo"><span>Produtos</span></h1>
+        <h1 class="titulo"><span>Mais vendidos</span></h1>
 
         <div class="swiper produtos-slider">
 
