--- a/index.html
+++ b/index.html
@@ -278,6 +278,109 @@
 
 
 
+    <section class="ofertas" id="ofertas">
+        <h1 class="titulo"><span>Promoção</span></h1>
+
+        <div class="swiper ofertas-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide box">
+
+                    <div class="icons">
+                        <a href="#" class="fa-regular fa-heart"></a>
+                    </div>
+
+                    <div class="image">
+                        <img src="imagens/remedio/remedio01.webp" alt="">
+                    </div>
+
+                    <div class="conteudo">
+                        <h3>Remedio 1</h3>
+                        <div class="preco">R$ 20,00</div>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+
+                    <div class="icons">
+                        <a href="#" class="fa-regular fa-heart"></a>
+                    </div>
+
+                    <div class="image">
+                        <img src="imagens/remedio/remedio02.webp" alt="">
+                    </div>
+
+                    <div class="conteudo">
+                        <h3>Remedio 2</h3>
+                        <div class="preco">R$ 20,00</div>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+
+                    <div class="icons">
+                        <a href="#" class="fa-regular fa-heart"></a>
+                    </div>
+
+                    <div class="image">
+                        <img src="imagens/remedio/remedio03.webp" alt="">
+                    </div>
+
+                    <div class="conteudo">
+                        <h3>Remedio 3</h3>
+                        <div class="preco">R$ 20,00</div>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+
+                    <div class="icons">
+                        <a href="#" class="fa-regular fa-heart"></a>
+                    </div>
+
+                    <div class="image">
+                        <img src="imagens/remedio/remedio04.webp" alt="">
+                    </div>
+
+                    <div class="conteudo">
+                        <h3>Remedio 4</h3>
+                        <div class="preco">R$ 20,00</div>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+
+                    <div class="icons">
+                        <a href="#" class="fa-regular fa-heart"></a>
+                    </div>
+
+                    <div class="image">
+                        <img src="imagens/remedio/remedio05.webp" alt="">
+                    </div>
+
+                    <div class="conteudo">
+                        <h3>Remedio 5</h3>
+                        <div class="preco">R$ 20,00</div>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+
+    </section>
+
+
+
 
 
 
