--- a/index.html
+++ b/index.html
@@ -292,12 +292,13 @@
                     </div>
 
                     <div class="image">
+                        <span class="desconto">25% off</span>
                         <img src="imagens/remedio/remedio01.webp" alt="">
                     </div>
 
                     <div class="conteudo">
                         <h3>Remedio 1</h3>
-                        <div class="preco">R$ 20,00</div>
+                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -309,12 +310,13 @@
                     </div>
 
                     <div class="image">
+                        <span class="desconto">25% off</span>
                         <img src="imagens/remedio/remedio02.webp" alt="">
                     </div>
 
                     <div class="conteudo">
                         <h3>Remedio 2</h3>
-                        <div class="preco">R$ 20,00</div>
+                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -326,12 +328,13 @@
                     </div>
 
                     <div class="image">
+                        <span class="desconto">25% off</span>
                         <img src="imagens/remedio/remedio03.webp" alt="">
                     </div>
 
                     <div class="conteudo">
                         <h3>Remedio 3</h3>
-                        <div class="preco">R$ 20,00</div>
+                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -343,12 +346,13 @@
                     </div>
 
                     <div class="image">
+                        <span class="desconto">25% off</span>
                         <img src="imagens/remedio/remedio04.webp" alt="">
                     </div>
 
                     <div class="conteudo">
                         <h3>Remedio 4</h3>
-                        <div class="preco">R$ 20,00</div>
+                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -360,12 +364,13 @@
                     </div>
 
                     <div class="image">
+                        <span class="desconto">25% off</span>
                         <img src="imagens/remedio/remedio05.webp" alt="">
                     </div>
 
                     <div class="conteudo">
                         <h3>Remedio 5</h3>
-                        <div class="preco">R$ 20,00</div>
+                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
