--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- INICIO HEADER SECTION -->
-    <header class="topo">
+    <header class="topo" id="inicio">
 
         <div class="topo-1">
             <a href="#" class="logo"><i class='bx bx-plus-medical'></i> Farmacia </a>
@@ -278,6 +278,8 @@
 
 
 
+    <!-- INICIO SECTION PROMOÇÃO -->
+
     <section class="ofertas" id="ofertas">
         <h1 class="titulo"><span>Promoção</span></h1>
 
@@ -298,7 +300,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 1</h3>
-                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -316,7 +318,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 2</h3>
-                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -334,7 +336,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 3</h3>
-                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -352,7 +354,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 4</h3>
-                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -370,7 +372,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 5</h3>
-                        <div class="preco">R$ 20,00<span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -383,6 +385,75 @@
         </div>
 
     </section>
+    <!-- FINAL SECTION PROMOÇÃO -->
+
+
+
+    <!-- COMEÇO SECTION ICONS -->
+
+    <section class="marcas-container">
+
+        <div class="swiper marcas-slider">
+
+            <div class="swiper-wrapper">
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-centrum-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-colgate-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-dove-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-eucerin-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-loreal-paris-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-medley-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-nivea-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <div class="marca">
+                        <img src="imagens/marcas/dpsp-pampers-set-2022-marcas-120x120.png" alt="">
+                    </div>
+                </div>
+
+                
+            </div>
+
+        </div>
+
+        
+    </section>
+
+    <!-- FINAL SECTION ICONS -->
 
 
 
