--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     <section class="news">
         <form action="">
-            <h3>Receba nossas novidades</h3>
+            <h3>Receba nossas novidades e promoções</h3>
             <input type="email" name="" placeholder="Entre com seu e-mail" id="" class="box">
             <input type="submit" value="Entrar" class="btn">
         </form>
