--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
     <!-- COMEÇO SECTION INICIO -->
     <!-- <section class="inicio" id="inicio"> -->
 
-        <div class="swiper banner-slider">
+    <div class="swiper banner-slider">
 
-            
 
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="imagens/banner/banner01.webp" alt=""></div>
-                <div class="swiper-slide"><img src="imagens/banner/banner02.webp" alt=""></div>
-                <div class="swiper-slide"><img src="imagens/banner/banner03.webp" alt=""></div>
-                <div class="swiper-slide"><img src="imagens/banner/banner06.webp" alt=""></div>
 
-            </div>
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="imagens/banner/banner01.webp" alt=""></div>
+            <div class="swiper-slide"><img src="imagens/banner/banner02.webp" alt=""></div>
+            <div class="swiper-slide"><img src="imagens/banner/banner03.webp" alt=""></div>
+            <div class="swiper-slide"><img src="imagens/banner/banner06.webp" alt=""></div>
 
         </div>
+
+    </div>
     <!-- </section> -->
     <!-- FINAL SECTION INICIO -->
 
@@ -150,7 +150,7 @@
             <i class="material-icons">store</i>
             <div class="conteudo">
                 <h3>Retire na loja</h3>
-                <p>Mais agilidade </p>
+                <p>Ganhe 5% desconto </p>
             </div>
         </div>
     </section>
@@ -272,7 +272,7 @@
             <input type="submit" value="Entrar" class="btn">
         </form>
     </section>
-   
+
 
     <!-- FINAL SECTION NEWS -->
 
@@ -300,7 +300,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 1</h3>
-                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -318,7 +318,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 2</h3>
-                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -336,7 +336,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 3</h3>
-                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 4</h3>
-                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -372,7 +372,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 5</h3>
-                        <div class="preco">R$ 20,00  <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -389,58 +389,60 @@
 
 
 
-    <!-- COMEÇO SECTION ICONS -->
+    <!-- COMEÇO SECTION MARCAS -->
 
-    <section class="marcas-container">
+
+    <section class="marcas">
+        <h1 class="titulo"><span>Marcas parceiras</span></h1>
 
         <div class="swiper marcas-slider">
 
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-centrum-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-colgate-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-dove-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-eucerin-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-loreal-paris-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-medley-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-nivea-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <div class="marca">
+                    <div class="image">
                         <img src="imagens/marcas/dpsp-pampers-set-2022-marcas-120x120.png" alt="">
                     </div>
                 </div>
@@ -450,10 +452,9 @@
 
         </div>
 
-        
     </section>
 
-    <!-- FINAL SECTION ICONS -->
+    <!-- FINAL SECTION MARCAS -->
 
 
 
