--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
 
     <section class="marcas">
-        <h1 class="titulo"><span>Marcas parceiras</span></h1>
+        <h1 class="titulo"><span>temos as melhores marcas</span></h1>
 
         <div class="swiper marcas-slider">
 
@@ -447,14 +447,70 @@
                     </div>
                 </div>
 
-                
+            </div>
+
+        </div>
+    </section>
+    <!-- FINAL SECTION MARCAS -->
+
+
+
+    <!-- COMEÇO SECTION FOOTER -->
+
+    <section class="footer">
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>Menu</h3>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Inicio</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Produtos</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Ofertas</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Novidades</a>
+            </div>
+
+            <div class="box">
+                <h3>Minha conta</h3>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Minha conta</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Meus pedidos</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Troca e devolução</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Politica de privacidade</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Formas de pagamento</a>
+                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Cancelamento de compra</a>
+            </div>
+
+            <div class="box-pagamento">
+                <h3>Formas de pagamento</h3>
+    
+                <a href="#" ><i class="fa-brands fa-cc-visa"></i></a>
+                <a href="#"><i class="fa-brands fa-cc-mastercard"></i></a>
+                <a href="#"><i class="fa-brands fa-pix"></i></a>
+                <a href="#"><i class="fa-brands fa-cc-paypal"></i></a>
+
+            </div>
+
+            <div class="box">
+                <h3>Fale conosco</h3>
+                <a href="#"> <i class='bx bxs-phone'></i> (21)xxxx-xxxx</i></a>
+                <a href="#"> <i class="fa-brands fa-whatsapp"></i> (21)xxxxx-xxxx</i></a>
+                <a href="#"> <i class='bx bxs-envelope'></i> sac-farmacia@gmail.com</a>
+                <img src="img/worldmap.png" class="map" alt="">
             </div>
 
         </div>
 
+        <div class="redes-social">
+            <h3>Redes sociais</h3>
+            <a href="#" class="bx bxl-facebook"></a>
+            <a href="#" class="bx bxl-twitter"></a>
+            <a href="#" class="bx bxl-instagram-alt"></a>
+        </div>
+
+        <div class="creditos">Copyright<i class='bx bx-copyright'></i> 2022 <span>Rogerio Pessanha</span></div>
     </section>
 
-    <!-- FINAL SECTION MARCAS -->
+
+    <!-- FINAL SECTION FOOTER -->
 
 
 
