--- a/index.html
+++ b/index.html
@@ -513,6 +513,16 @@
     <!-- FINAL SECTION FOOTER -->
 
 
+    <!--INICIO CARREGAMENTO DA PÁGINA -->
+
+    <div class="loader-container">
+        <img src="imagens/gif-logo-fundo/carregamento.gif" alt="">
+    </div>
+
+
+    <!--FIM CARREGAMENTO DA PÁGINA -->
+
+
 
 
 
