--- a/index.html
+++ b/index.html
@@ -26,21 +26,41 @@
 
 <body>
     <!-- INICIO HEADER SECTION -->
+
+
+
     <header class="topo" id="inicio">
 
         <div class="topo-1">
+
             <a href="#" class="logo"><i class='bx bx-plus-medical'></i> Farmacia </a>
 
 
             <form action="" class="form-pesquisa">
-                <input type="search" name="" placeholder="Pesquisar" id="caixa-pesquisa">
-                <label for="caixa-pesquisa" class="fa-solid fa-magnifying-glass"></label>
+
+                <input type="search" name="" placeholder="pesquisar..." id="caixa-pesquisa">
+
+                <label for="caixa-pesquisa" class="bx bx-search"></label>
+
             </form>
 
+
+            <!-- <form action="" class="form-pesquisa">
+
+                <input type="search" name="" placeholder="Pesquisar" id="caixa-pesquisa">
+
+                <label for="caixa-pesquisa" class="fa-solid fa-magnifying-glass"></label>
+
+            </form> -->
+
             <div class="icons">
+
                 <div id="botao-pesquisar" class="fa-solid fa-magnifying-glass"></div>
+
                 <div id="login-btn" class="fa-solid fa-user"></div>
+
                 <a href="#" class="fa-solid fa-heart"></a>
+
                 <a href="#" class="fa-solid fa-cart-shopping"></a>
 
             </div>
@@ -99,22 +119,22 @@
 
 
     <!-- COMEÇO SECTION INICIO -->
-    <!-- <section class="inicio" id="inicio"> -->
+    <section class="inicio" id="inicio">
 
-    <div class="swiper banner-slider">
+        <div class="swiper banner-slider">
 
 
 
-        <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="imagens/banner/banner01.webp" alt=""></div>
-            <div class="swiper-slide"><img src="imagens/banner/banner02.webp" alt=""></div>
-            <div class="swiper-slide"><img src="imagens/banner/banner03.webp" alt=""></div>
-            <div class="swiper-slide"><img src="imagens/banner/banner06.webp" alt=""></div>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="imagens/banner/banner01.webp" alt=""></div>
+                <div class="swiper-slide"><img src="imagens/banner/banner02.webp" alt=""></div>
+                <div class="swiper-slide"><img src="imagens/banner/banner03.webp" alt=""></div>
+                <div class="swiper-slide"><img src="imagens/banner/banner06.webp" alt=""></div>
+
+            </div>
 
         </div>
-
-    </div>
-    <!-- </section> -->
+    </section>
     <!-- FINAL SECTION INICIO -->
 
 
@@ -481,8 +501,8 @@
 
             <div class="box-pagamento">
                 <h3>Formas de pagamento</h3>
-    
-                <a href="#" ><i class="fa-brands fa-cc-visa"></i></a>
+
+                <a href="#"><i class="fa-brands fa-cc-visa"></i></a>
                 <a href="#"><i class="fa-brands fa-cc-mastercard"></i></a>
                 <a href="#"><i class="fa-brands fa-pix"></i></a>
                 <a href="#"><i class="fa-brands fa-cc-paypal"></i></a>
