--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 1</h3>
-                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -338,7 +338,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 2</h3>
-                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -356,7 +356,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 3</h3>
-                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 4</h3>
-                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -392,7 +392,7 @@
 
                     <div class="conteudo">
                         <h3>Remedio 5</h3>
-                        <div class="preco">R$ 20,00 <span>R$ 15.00</span></div>
+                        <div class="preco">R$ 15,00 <span>R$ 20.00</span></div>
                         <a href="#" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -413,7 +413,7 @@
 
 
     <section class="marcas">
-        <h1 class="titulo"><span>temos as melhores marcas</span></h1>
+        <h1 class="titulo"><span>as melhores marcas estão aqui</span></h1>
 
         <div class="swiper marcas-slider">
 
@@ -542,30 +542,13 @@
 
     <!--FIM CARREGAMENTO DA PÁGINA -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script> -->
-
-
+    <!-- SWIPER JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
 
     <!-- JS -->
     <script src="js/script.js"></script>
-    <!-- <script src="js/swiper-bundle.min.js"></script> -->
-
-    <!-- SWIPER JS -->
+   
 
 </body>
 
