--- a/index.html
+++ b/index.html
@@ -654,10 +654,10 @@
             <div class="box-pagamento">
                 <h3>Formas de pagamento</h3>
 
-                <a href="#"><i class="fa-brands fa-cc-visa"></i></a>
-                <a href="#"><i class="fa-brands fa-cc-mastercard"></i></a>
-                <a href="#"><i class="fa-brands fa-pix"></i></a>
-                <a href="#"><i class="fa-brands fa-cc-paypal"></i></a>
+                <a href="#"><i class="fa-brands fa-cc-visa" id="visa"></i></a>
+                <a href="#"><i class="fa-brands fa-cc-mastercard" id="master"></i></a>
+                <a href="#"><i class="fa-brands fa-pix" id="pix"></i></a>
+                <a href="#"><i class="fa-brands fa-cc-paypal" id="paypal"></i></a>
 
             </div>
 
