--- a/index.html
+++ b/index.html
@@ -634,11 +634,10 @@
         <div class="box-container">
 
             <div class="box">
-                <h3>Menu</h3>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Inicio</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Produtos</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Ofertas</a>
-                <a href="#"> <i class='bx bx-right-arrow-alt'></i>Novidades</a>
+                <h3>Onde nós estamos</h3>
+                <a href="#"> <i class="fa-solid fa-location-dot"></i>São Gonçalo</a>
+                <a href="#"> <i class="fa-solid fa-location-dot"></i>Niterói</a>
+                <a href="#"> <i class="fa-solid fa-location-dot"></i>Rio de Janeiro</a>
             </div>
 
             <div class="box">
